# LocalSearch

./: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
localsearch/: Cargo.toml  config.example.toml  justfile
localsearch/src/: config.rs  indexer.rs  main.rs  searcher.rs  server.rs  snippet.rs  watcher.rs
localsearch/src/parser/: csv_parser.rs  docx.rs  mod.rs  pdf.rs  text.rs
localsearch/static/: app.js  index.html  style.css
notes/: data.csv  ideas.json  performance.md  sample-notes.txt  welcome.md
src/: App.tsx  index.css
src/components/: CreateFileModal.tsx  PreviewModal.tsx  ResultCard.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  Toast.tsx
