[package]
name = "localsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Search Engine
tantivy = "0.22"

# Filesystem & Watcher
notify = "6.1"
walkdir = "2.5"
home = "0.5"

# Parsers
lopdf = "0.33"
docx-rs = "0.4"
csv = "1.3"

# CLI & Utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
toml = "0.8"
regex = "1.10"
glob = "0.3"
pathdiff = "0.2"
open = "5.1"
